5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1667_2322.log
== TEST (2019-04-16 16:15:37) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE )
	print(NEVILLE.lower())
	
else ( nb == LUNA)
	print(LUNA.lowee())
	
-- ERROR:
File "XXXX", line 9
    if ( nb == NEVILLE )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:38) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE )
	print(NEVILLE.lower())
	
else ( nb == LUNA)
	print(LUNA.lowee())
	
-- ERROR:
File "XXXX", line 9
    if ( nb == NEVILLE )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:40) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE )
	print(NEVILLE.lower())
	
else ( nb == LUNA)
	print(LUNA.lowee())
	
-- ERROR:
File "XXXX", line 9
    if ( nb == NEVILLE )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:51) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE ):
	print(NEVILLE.lower())
	
else: 
	( nb == LUNA)
	print(LUNA.lowee())
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if ( nb == NEVILLE ):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:16:19) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE ):
	print(NEVILLE.lower())
	
else: 
	( nb == LUNA)
	print(LUNA.loweR())
	
-- EXECUTION TIME:
0.1431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2322/main.py", line 9, in <module>
    if ( nb == NEVILLE ):
NameError: name 'NEVILLE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:19) 
-- CODE:
nb=input("digite o nome: ")

en=15.7654
tn=1.3479
el=7.674
tl=3.789


if ( nb == NEVILLE ):
	print(NEVILLE.lower())
	
else: 
	( nb == LUNA)
	print(LUNA.loweR())
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if ( nb == NEVILLE ):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:00) 
-- CODE:
nome=input("digite o nome: ")

if nome == ("NEVILLE".lower())
	esp = 15.7654
	tem = 1.3479
	print ( )
	
-- ERROR:
File "XXXX", line 3
    if nome == ("NEVILLE".lower())
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:02) 
-- CODE:
nome=input("digite o nome: ")

if nome == ("NEVILLE".lower())
	esp = 15.7654
	tem = 1.3479
	print ( )
	
-- ERROR:
File "XXXX", line 3
    if nome == ("NEVILLE".lower())
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:13) 
-- CODE:
nome=input("digite o nome: ")

if nome == (neville.lower())
	esp = 15.7654
	tem = 1.3479
	print ( )
	
-- ERROR:
File "XXXX", line 3
    if nome == (neville.lower())
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:18) 
-- CODE:
nome=input("digite o nome: ")

if nome == (neville.lower())
	esp = 15.7654
	tem = 1.3479
	print ( )
	
-- ERROR:
File "XXXX", line 3
    if nome == (neville.lower())
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:19) 
-- CODE:
nome=input("digite o nome: ")

if nome == (neville.lower())
	esp = 15.7654
	tem = 1.3479
	print ( )
	
-- ERROR:
File "XXXX", line 3
    if nome == (neville.lower())
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
